--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -1512,34 +1512,6 @@ h6 {
     color: inherit
 }
 
-.h1 .small,
-.h1 small,
-.h2 .small,
-.h2 small,
-.h3 .small,
-.h3 small,
-.h4 .small,
-.h4 small,
-.h5 .small,
-.h5 small,
-.h6 .small,
-.h6 small,
-h1 .small,
-h1 small,
-h2 .small,
-h2 small,
-h3 .small,
-h3 small,
-h4 .small,
-h4 small,
-h5 .small,
-h5 small,
-h6 .small,
-h6 small {
-    font-weight: 400;
-    line-height: 1;
-    color: #777
-}
 
 .h1,
 .h2,
@@ -1551,20 +1523,7 @@ h3 {
     margin-bottom: 10px
 }
 
-.h1 .small,
-.h1 small,
-.h2 .small,
-.h2 small,
-.h3 .small,
-.h3 small,
-h1 .small,
-h1 small,
-h2 .small,
-h2 small,
-h3 .small,
-h3 small {
-    font-size: 65%
-}
+
 
 .h4,
 .h5,
@@ -1594,11 +1553,6 @@ h6 small {
 .h1,
 h1 {
     font-size: 36px
-}
-
-.h2,
-h2 {
-    font-size: 30px
 }
 
 .h3,
@@ -1650,184 +1604,179 @@ mark {
 }
 
 .text-left {
-    text-align: left
+    text-align: left;
 }
 
 .text-right {
-    text-align: right
+    text-align: right;
 }
 
 .text-center {
-    text-align: center
+    text-align: center;
 }
 
 .text-justify {
-    text-align: justify
+    text-align: justify;
 }
 
 .text-nowrap {
-    white-space: nowrap
+    white-space: nowrap;
 }
 
 .text-lowercase {
-    text-transform: lowercase
+    text-transform: lowercase;
 }
 
 .text-uppercase {
-    text-transform: uppercase
+    text-transform: uppercase;
 }
 
 .text-capitalize {
-    text-transform: capitalize
+    text-transform: capitalize;
 }
 
 .text-muted {
-    color: #777
+    color: #777;
 }
 
 .text-primary {
-    color: #337ab7
+    color: #337ab7;
 }
 
 a.text-primary:focus,
 a.text-primary:hover {
-    color: #286090
+    color: #286090;
 }
 
 .text-success {
-    color: #3c763d
+    color: #3c763d;
 }
 
 a.text-success:focus,
 a.text-success:hover {
-    color: #2b542c
+    color: #2b542c;
 }
 
 .text-info {
-    color: #31708f
+    color: #31708f;
 }
 
 a.text-info:focus,
 a.text-info:hover {
-    color: #245269
+    color: #245269;
 }
 
 .text-warning {
-    color: #8a6d3b
+    color: #8a6d3b;
 }
 
 a.text-warning:focus,
 a.text-warning:hover {
-    color: #66512c
+    color: #66512c;
 }
 
 .text-danger {
-    color: #a94442
+    color: #a94442;
 }
 
 a.text-danger:focus,
 a.text-danger:hover {
-    color: #843534
+    color: #843534;
 }
 
 .bg-primary {
     color: #fff;
-    background-color: #337ab7
+    background-color: #337ab7;
 }
 
 a.bg-primary:focus,
 a.bg-primary:hover {
-    background-color: #286090
+    background-color: #286090;
 }
 
 .bg-success {
-    background-color: #dff0d8
+    background-color: #dff0d8;
 }
 
 a.bg-success:focus,
 a.bg-success:hover {
-    background-color: #c1e2b3
+    background-color: #c1e2b3;
 }
 
 .bg-info {
-    background-color: #d9edf7
+    background-color: #d9edf7;
 }
 
 a.bg-info:focus,
 a.bg-info:hover {
-    background-color: #afd9ee
+    background-color: #afd9ee;
 }
 
 .bg-warning {
-    background-color: #fcf8e3
+    background-color: #fcf8e3;
 }
 
 a.bg-warning:focus,
 a.bg-warning:hover {
-    background-color: #f7ecb5
+    background-color: #f7ecb5;
 }
 
 .bg-danger {
-    background-color: #f2dede
+    background-color: #f2dede;
 }
 
 a.bg-danger:focus,
 a.bg-danger:hover {
-    background-color: #e4b9b9
+    background-color: #e4b9b9;
 }
 
 .page-header {
     padding-bottom: 9px;
     margin: 40px 0 20px;
-    border-bottom: 1px solid #eee
+    border-bottom: 1px solid #eee;
 }
 
 ol,
 ul {
     margin-top: 0;
-    margin-bottom: 10px
+    margin-bottom: 10px;
 }
 
 ol ol,
 ol ul,
 ul ol,
 ul ul {
-    margin-bottom: 0
+    margin-bottom: 0;
 }
 
 .list-unstyled {
     padding-left: 0;
-    list-style: none
+    list-style: none;
 }
 
 .list-inline {
     padding-left: 0;
     margin-left: -5px;
-    list-style: none
+    list-style: none;
 }
 
 .list-inline>li {
     display: inline-block;
     padding-right: 5px;
-    padding-left: 5px
+    padding-left: 5px;
 }
 
 dl {
     margin-top: 0;
-    margin-bottom: 20px
-}
-
-dd,
-dt {
-    line-height: 1.42857143
+    margin-bottom: 20px;
 }
 
 dt {
-    font-weight: 700
+    font-weight: 700;
 }
 
 dd {
-    margin-left: 0
+    margin-left: 0;
 }
 
 @media (min-width:768px) {
@@ -1838,17 +1787,17 @@ dd {
         clear: left;
         text-align: right;
         text-overflow: ellipsis;
-        white-space: nowrap
+        white-space: nowrap;
     }
     .dl-horizontal dd {
-        margin-left: 180px
+        margin-left: 180px;
     }
 }
 
 abbr[data-original-title],
 abbr[title] {
     cursor: help;
-    border-bottom: 1px dotted #777
+    border-bottom: 1px dotted #777;
 }
 
 .initialism {
@@ -1978,7 +1927,7 @@ pre code {
     overflow-y: scroll
 }
 
-.container {
+.container { /* à revoir */
     padding-right: 15px;
     padding-left: 15px;
     margin-right: auto;
@@ -1986,19 +1935,19 @@ pre code {
 }
 
 @media (min-width:768px) {
-    .container {
+    .container { /* à revoir */
         width: 750px
     }
 }
 
 @media (min-width:992px) {
-    .container {
+    .container { /* à revoir */
         width: 970px
     }
 }
 
 @media (min-width:1200px) {
-    .container {
+    .container { /* à revoir */
         width: 1170px
     }
 }
