--- a/style.css
+++ b/style.css
@@ -7,6 +7,20 @@ body {
     -moz-osx-font-smoothing: grayscale;
 }
 
+h1 {
+    font-size: 32px;
+}
+h2 { 
+    font-size: 22px;
+    line-height: 1.4em;
+    text-align: center;
+}
+h3 {
+    margin-top: 10px;
+    margin-bottom: 20px;
+}
+h4
+
 a,
 button {
     transition: all .3s ease-in-out;
@@ -30,6 +44,7 @@ a:hover {
 .bloc {
     width: 100%;
     clear: both;
+    background-color: #FFFFFF;
     background: 50% 50% no-repeat;
     padding: 0 50px;
     -webkit-background-size: cover;
@@ -39,64 +54,24 @@ a:hover {
     position: relative;
 }
 
-.bloc .container {
-    padding-left: 0;
-    padding-right: 0;
-}
-
-.bloc-lg {
-    padding: 100px 50px;
-}
-
 .bloc-md {
     padding: 50px;
 }
 
-.bloc-sm {
-    padding: 20px 50px;
-}
+
 
 .bg-center,
 .bg-l-edge,
 .bg-r-edge,
-.bg-t-edge,
 .bg-b-edge,
 .bg-tl-edge,
 .bg-bl-edge,
 .bg-tr-edge,
-.bg-br-edge,
-.bg-repeat {
+.bg-br-edge {
     -webkit-background-size: auto!important;
     -moz-background-size: auto!important;
     -o-background-size: auto!important;
     background-size: auto!important;
-}
-
-.bg-repeat {
-    background: repeat;
-}
-
-.bg-t-edge {
-    background: top no-repeat;
-}
-
-.bloc-bg-texture::before {
-    content: "";
-    background-size: 2px 2px;
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-}
-
-.texture-paper::before {
-    background: url("img/texture-paper.png");
-    background-size: 280px 280px;
-}
-
-.b-parallax {
-    background-attachment: fixed;
 }
 
 .d-bloc {
@@ -119,43 +94,10 @@ a:hover {
     border-color: rgba(255, 255, 255, .2);
 }
 
-.d-bloc .a-btn,
-.d-bloc .navbar a,
-.d-bloc .navbar-brand,
-.d-bloc a .icon-sm,
-.d-bloc a .icon-md,
-.d-bloc a .icon-lg,
-.d-bloc a .icon-xl,
-.d-bloc h1 a,
-.d-bloc h2 a,
-.d-bloc h3 a,
-.d-bloc h4 a,
-.d-bloc h5 a,
-.d-bloc h6 a,
-.d-bloc p a {
-    color: rgba(255, 255, 255, .6);
-}
-
-.d-bloc .a-btn:hover,
-.d-bloc .navbar a:hover,
-.d-bloc .navbar-brand:hover,
-.d-bloc a:hover .icon-sm,
-.d-bloc a:hover .icon-md,
-.d-bloc a:hover .icon-lg,
-.d-bloc a:hover .icon-xl,
-.d-bloc h1 a:hover,
-.d-bloc h2 a:hover,
-.d-bloc h3 a:hover,
-.d-bloc h4 a:hover,
-.d-bloc h5 a:hover,
-.d-bloc h6 a:hover,
-.d-bloc p a:hover {
-    color: rgba(255, 255, 255, 1);
-}
-
+/*
 .d-bloc .navbar-toggle .icon-bar {
     background: rgba(255, 255, 255, 1);
-}
+}*/
 
 .d-bloc .btn-wire,
 .d-bloc .btn-wire:hover {
@@ -193,17 +135,15 @@ a:hover {
     border-color: rgba(0, 0, 0, .3);
 }
 
-.d-bloc .panel,
-.l-bloc {
+.d-bloc .panel {
     color: rgba(0, 0, 0, .5);
 }
 
-.d-bloc .panel button:hover,
-.l-bloc button:hover {
+.d-bloc .panel button:hover {
     color: rgba(0, 0, 0, .7);
 }
 
-.l-bloc .icon-round,
+/*.l-bloc .icon-round,
 .l-bloc .icon-square,
 .l-bloc .icon-rounded,
 .l-bloc .icon-semi-rounded-a,
@@ -216,41 +156,6 @@ a:hover {
     border-color: rgba(0, 0, 0, .1);
 }
 
-.d-bloc .panel .a-btn,
-.l-bloc .a-btn,
-.l-bloc .navbar a,
-.l-bloc .navbar-brand,
-.l-bloc a .icon-sm,
-.l-bloc a .icon-md,
-.l-bloc a .icon-lg,
-.l-bloc a .icon-xl,
-.l-bloc h1 a,
-.l-bloc h2 a,
-.l-bloc h3 a,
-.l-bloc h4 a,
-.l-bloc h5 a,
-.l-bloc h6 a,
-.l-bloc p a {
-    color: rgba(0, 0, 0, .6);
-}
-
-.d-bloc .panel .a-btn:hover,
-.l-bloc .a-btn:hover,
-.l-bloc .navbar a:hover,
-.l-bloc .navbar-brand:hover,
-.l-bloc a:hover .icon-sm,
-.l-bloc a:hover .icon-md,
-.l-bloc a:hover .icon-lg,
-.l-bloc a:hover .icon-xl,
-.l-bloc h1 a:hover,
-.l-bloc h2 a:hover,
-.l-bloc h3 a:hover,
-.l-bloc h4 a:hover,
-.l-bloc h5 a:hover,
-.l-bloc h6 a:hover,
-.l-bloc p a:hover {
-    color: rgba(0, 0, 0, 1);
-}
 
 .l-bloc .navbar-toggle .icon-bar {
     color: rgba(0, 0, 0, .6);
@@ -262,29 +167,10 @@ a:hover {
 .l-bloc .btn-wire:hover {
     color: rgba(0, 0, 0, .7);
     border-color: rgba(0, 0, 0, .3);
-}
+}*/
 
 .voffset {
     margin-top: 30px;
-}
-
-.voffset-lg {
-    margin-top: 80px;
-}
-
-.row-no-gutters {
-    margin-right: 0;
-    margin-left: 0;
-}
-
-.row.row-no-gutters > [class^="col-"],
-.row.row-no-gutters > [class*=" col-"] {
-    padding-right: 0;
-    padding-left: 0;
-}
-
-#bloc-1-hero h1 {
-    font-size: 32px;
 }
 
 .navbar {
@@ -355,7 +241,7 @@ a:hover {
     float: left;
 }
 
-.nav-invert .navbar-header,
+.nav-invert,
 .nav-invert .navbar-brand {
     float: right;
     position: relative;
@@ -381,10 +267,9 @@ a:hover {
     .nav-center {
         text-align: center;
     }
-    .nav-center .navbar-header {
+    .nav-center {
         width: 100%;
     }
-    .nav-center .navbar-header,
     .nav-center .navbar-brand,
     .nav-center .nav > li {
         float: none;
@@ -435,11 +320,6 @@ nav .caret {
     float: right;
 }
 
-.mg-md {
-    margin-top: 10px;
-    margin-bottom: 20px;
-}
-
 .mg-lg {
     margin-top: 10px;
     margin-bottom: 40px;
@@ -468,23 +348,8 @@ button {
     border-radius: 40px;
 }
 
-.btn-clean {
-    border: 1px solid rgba(0, 0, 0, .08);
-    border-bottom-color: rgba(0, 0, 0, .1);
-    text-shadow: 0 1px 0 rgba(0, 0, 1, .1);
-    box-shadow: 0 1px 3px rgba(0, 0, 1, .25), inset 0 1px 0 0 rgba(255, 255, 255, .15);
-}
-
 .icon-md {
     font-size: 30px!important;
-}
-
-.icon-lg {
-    font-size: 60px!important;
-}
-
-.sm-shadow {
-    text-shadow: 0 1px 2px rgba(0, 0, 0, .3);
 }
 
 .panel-sq,
@@ -639,33 +504,6 @@ a[data-lightbox]:hover img {
     background: none;
 }
 
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p,
-label,
-.btn,
-a {
-    font-family: "helvetica";
-    font-weight: 400;
-    color: #575757!important;
-}
-
-.container {
-    max-width: 1000px;
-}
-
-.hero-bloc-text {
-    font-size: 38px;
-}
-
-.hero-bloc-text-sub {
-    font-size: 36px;
-}
-
 .statement-bloc-text {
     line-height: 26px;
     font-style: italic;
@@ -680,33 +518,14 @@ p {
     font-size: 11px;
 }
 
-.tight-width-whitespace {
-    max-width: 600px;
-    margin: auto auto auto auto;
-}
-
 .h1 {
     font-size: 20px;
     font-family: "Open Sans";
 }
 
-.cta-hero {
-    margin-top: 22px;
-    color: #FFFFFF!important;
-    text-transform: uppercase;
-    padding: 12px 28px 12px 28px;
-    font-size: 16px;
-    font-weight: 700;
-}
-
 .social {
     max-width: 400px;
-    margin: auto auto auto auto;
-}
-
-h2 {
-    font-size: 22px;
-    line-height: 1.4em;
+    margin: auto;
 }
 
 h3 {
@@ -714,12 +533,6 @@ h3 {
     text-transform: uppercase;
     font-weight: 700;
     color: #333333!important;
-}
-
-.med-width-whitespace {
-    max-width: 800px;
-    margin: auto auto auto auto;
-    box-shadow: 0px 0px 0px #000000;
 }
 
 h1 {
@@ -730,100 +543,219 @@ h4 {
     color: #333333!important;
 }
 
-.icons {
-    margin-bottom: 14px;
-    margin-top: 24px;
-}
-
-.white {
-    color: #FFFFFF!important;
+.black {
+    color: #000;
 }
 
 .portfolio-thumb {
     margin-bottom: 24px;
 }
 
-.portfolio-row {
-    margin-bottom: 44px;
-    margin-top: 50px;
-}
-
 .avatar {
     box-shadow: 0px 4px 9px rgba(0, 0, 0, 0.3);
 }
 
-.black-background {
-    background-color: rgba(165, 147, 99, 0.7);
-    padding: 40px 40px 40px 40px;
-}
-
-.bold-link {
-    font-weight: 900;
-    text-decoration: underline!important;
-}
-
-.bgc-white {
-    background-color: #FFFFFF;
-}
-
-.bgc-dark-slate-blue {
-    background-color: #364577;
-}
-
-.bgc-atomic-tangerine {
-    background-color: #F3976C;
-}
-
-.tc-white {
-    color: #F3976C!important;
-}
-
-.btn-atomic-tangerine {
-    background: #F3976C;
-    color: #FFFFFF!important;
-}
-
-.btn-atomic-tangerine:hover {
-    background: #c27956!important;
-    color: #FFFFFF!important;
-}
-
-.ltc-white {
-    color: #FFFFFF!important;
-}
-
-.ltc-white:hover {
-    color: #cccccc!important;
-}
-
 .ltc-atomic-tangerine {
-    color: #F3976C!important;
+    color: #f4ab89!important;
 }
 
 .ltc-atomic-tangerine:hover {
     color: #c27956!important;
 }
 
-.icon-dark-slate-blue {
-    color: #364577!important;
-    border-color: #364577!important;
+/*///// body /////*//*///// body /////*//*///// body /////*//*///// body /////*//*///// body /////*/
+/*///// body /////*//*///// body /////*//*///// body /////*//*///// body /////*//*///// body /////*/
+/*///// body /////*//*///// body /////*//*///// body /////*//*///// body /////*//*///// body /////*/
+/*///// body /////*//*///// body /////*//*///// body /////*//*///// body /////*//*///// body /////*/
+
+
+
+/*///// btn /////*//*///// btn /////*//*///// btn /////*//*///// btn /////*//*///// btn /////*/
+/*///// btn /////*//*///// btn /////*//*///// btn /////*//*///// btn /////*//*///// btn /////*/
+/*///// btn /////*//*///// btn /////*//*///// btn /////*//*///// btn /////*//*///// btn /////*/
+/*///// btn /////*//*///// btn /////*//*///// btn /////*//*///// btn /////*//*///// btn /////*/
+
+.btn {
+    background: #F3976C;
+    margin-top: 22px;
+    text-transform: uppercase;
+    padding: 12px 28px 12px 28px;
+    font-size: 16px;
+    font-weight: 700;
 }
 
-.bg-dots-bg {
-    background-image: url("img/dots-bg.png");
+.btn:hover {
+    background: #c27956!important;
+    color: #FFFFFF!important;
 }
 
-.bg-lines-h2-bg {
-    background-image: url("img/lines-h2-bg.png");
+.btn--txt{
+    color: #ffff;
 }
 
-.bg-banniere {
-    background-image: url("img/agence-la-panthere.jpg");
+.txt--orange {
+    color: #F3976C;
 }
 
-.bg-presentation {
+.txt--white {
+    color: #FFFF;
+}
+
+.txt--black {
+    color: #162339;
+}
+
+/*///// header /////*//*///// header /////*//*///// header /////*//*///// header /////*//*///// header /////*/
+/*///// header /////*//*///// header /////*//*///// header /////*//*///// header /////*//*///// header /////*/
+/*///// header /////*//*///// header /////*//*///// header /////*//*///// header /////*//*///// header /////*/
+/*///// header /////*//*///// header /////*//*///// header /////*//*///// header /////*//*///// header /////*/
+
+.header {
+    width: 100%; height: 95px;
+    padding-top: 20px;
+}
+
+/*///// main /////*//*///// main /////*//*///// main /////*//*///// main /////*//*///// main /////*/
+/*///// main /////*//*///// main /////*//*///// main /////*//*///// main /////*//*///// main /////*/
+/*///// main /////*//*///// main /////*//*///// main /////*//*///// main /////*//*///// main /////*/
+/*///// main /////*//*///// main /////*//*///// main /////*//*///// main /////*//*///// main /////*/
+
+.main {
+    display: flex;
+    flex-direction: column;
+}
+
+.aside--top {
+    width: 100%; height: 430px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-image: url(./img/agence-la-panthere.jpg);
+    background-attachment: fixed;
+    -webkit-background-size: auto!important;
+    -moz-background-size: auto!important;
+    -o-background-size: auto!important;
+    background-size: auto!important;
+}
+
+/*///// article /////*//*///// article /////*//*///// article /////*//*///// article /////*//*///// article /////*/
+/*///// article /////*//*///// article /////*//*///// article /////*//*///// article /////*//*///// article /////*/
+/*///// article /////*//*///// article /////*//*///// article /////*//*///// article /////*//*///// article /////*/
+/*///// article /////*//*///// article /////*//*///// article /////*//*///// article /////*//*///// article /////*/
+
+.article {
+    padding-right: 15px;
+    padding-left: 15px;
+}
+
+.articleTop__container {
+    max-width: 800px;
+    margin: auto;
+}
+
+.icon {
+    font-size: 60px;
+    margin-bottom: 14px;
+    margin-top: 24px;
+    color: #364577;
+    text-shadow: 0 1px 2px rgba(0, 0, 0, .3);
+}
+
+/*///// article middle /////*//*///// article middle /////*//*///// article middle /////*//*///// article middle /////*//*///// article middle /////*/
+/*///// article middle /////*//*///// article middle /////*//*///// article middle /////*//*///// article middle /////*//*///// article middle /////*/
+/*///// article middle /////*//*///// article middle /////*//*///// article middle /////*//*///// article middle /////*//*///// article middle /////*/
+/*///// article middle /////*//*///// article middle /////*//*///// article middle /////*//*///// article middle /////*//*///// article middle /////*/
+
+.article--middle {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     background-image: url("img/image-de-presentation.bmp");
+    background-attachment: fixed;
+    background-size: cover;
 }
+
+.articleMiddle__container {
+    max-width: 600px;
+    margin: 80px 20px;
+    background-color: #162339;
+    padding: 40px 40px 40px 40px;
+}
+
+.articleMiddle__link {
+    color: #FFFF;
+    font-weight: 900;
+    text-decoration: underline;
+}
+
+/*///// article bottom /////*//*///// article bottom /////*//*///// article bottom /////*//*///// article bottom /////*//*///// article bottom /////*/
+/*///// article bottom /////*//*///// article bottom /////*//*///// article bottom /////*//*///// article bottom /////*//*///// article bottom /////*/
+/*///// article bottom /////*//*///// article bottom /////*//*///// article bottom /////*//*///// article bottom /////*//*///// article bottom /////*/
+/*///// article bottom /////*//*///// article bottom /////*//*///// article bottom /////*//*///// article bottom /////*//*///// article bottom /////*/
+
+.article--bottom {
+    margin: 20px 0px 30px 0px;
+}
+
+/*///// section /////*//*///// section /////*/
+
+.container__portfolio {
+    max-width: 600px;
+    margin: auto;
+}
+
+/*///// aside bottom /////*//*///// aside bottom /////*//*///// aside bottom /////*//*///// aside bottom /////*//*///// aside bottom /////*/
+/*///// aside bottom /////*//*///// aside bottom /////*//*///// aside bottom /////*//*///// aside bottom /////*//*///// aside bottom /////*/
+/*///// aside bottom /////*//*///// aside bottom /////*//*///// aside bottom /////*//*///// aside bottom /////*//*///// aside bottom /////*/
+/*///// aside bottom /////*//*///// aside bottom /////*//*///// aside bottom /////*//*///// aside bottom /////*//*///// aside bottom /////*/
+
+.asideBottom {
+    width: 100%; height: 260px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-image: url("img/agence-la-panthere.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+.heading-txt--white {
+    color: #FFFF;
+    text-shadow: 2px 2px #162339;
+}
+
+/*///// footer /////*//*///// footer /////*//*///// footer /////*//*///// footer /////*//*///// footer /////*/
+/*///// footer /////*//*///// footer /////*//*///// footer /////*//*///// footer /////*//*///// footer /////*/
+/*///// footer /////*//*///// footer /////*//*///// footer /////*//*///// footer /////*//*///// footer /////*/
+/*///// footer /////*//*///// footer /////*//*///// footer /////*//*///// footer /////*//*///// footer /////*/
+
+.footer {
+    width: 100%; height: 200px;
+    display: flex;
+    flex-direction: column;
+    justify-content:space-around;
+    padding: 20px 0px;
+    background-color: #F4AB89;
+    border: 4px solid #162339;
+}
+
+.footer__container--bottom {
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+    padding: 0px 20%;
+}
+
+.btn--bleuDark {
+    color: #162339;
+}
+
+/*///// média queries /////*//*///// média queries /////*//*///// média queries /////*//*///// média queries /////*//*///// média queries /////*/
+/*///// média queries /////*//*///// média queries /////*//*///// média queries /////*//*///// média queries /////*//*///// média queries /////*/
+/*///// média queries /////*//*///// média queries /////*//*///// média queries /////*//*///// média queries /////*//*///// média queries /////*/
+/*///// média queries /////*//*///// média queries /////*//*///// média queries /////*//*///// média queries /////*//*///// média queries /////*/
 
 @media (max-width: 1024px) {
     .bloc {
@@ -831,9 +763,9 @@ h4 {
         padding-right: 20px;
     }
     .bloc.full-width-bloc,
-    .bloc-tile-2.full-width-bloc .container,
-    .bloc-tile-3.full-width-bloc .container,
-    .bloc-tile-4.full-width-bloc .container {
+    .bloc-tile-2.full-width-bloc,
+    .bloc-tile-3.full-width-bloc,
+    .bloc-tile-4.full-width-bloc {
         padding-left: 0;
         padding-right: 0;
     }
@@ -848,25 +780,8 @@ h4 {
     }
 }
 
-@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: landscape) {
-    .b-parallax {
-        background-attachment: scroll;
-    }
-}
-
-@media only screen and (min-device-width: 1024px) and (max-device-width: 1366px) and (-webkit-min-device-pixel-ratio: 1.5) {
-    .b-parallax {
-        background-attachment: scroll;
-    }
-}
-
 @media (max-width: 991px) {
-    .container {
-        width: 100%;
-    }
-    .b-parallax {
-        background-attachment: scroll;
-    }
+    
     .page-container,
     #hero-bloc {
         overflow-x: hidden;
@@ -905,18 +820,12 @@ h4 {
         padding-left: 10px!important;
         padding-right: 10px!important;
     }
-    .b-parallax {
-        background-attachment: scroll;
-    }
     .navbar .nav {
         padding-top: 0;
         border-top: 1px solid rgba(0, 0, 0, .2);
         float: none!important;
     }
-    .navbar.row {
-        margin-left: 0;
-        margin-right: 0;
-    }
+
     .site-navigation {
         position: inherit;
         transform: none;
@@ -965,7 +874,7 @@ h4 {
         max-height: 40px;
         width: auto;
     }
-    .nav-invert .navbar-header {
+    .navbar-header {
         float: none;
         width: 100%;
     }
@@ -973,23 +882,18 @@ h4 {
         float: left;
         margin-left: 10px;
     }
-    .bloc {
-        padding-left: 0;
-        padding-right: 0;
-    }
     .bloc-xxl,
-    .bloc-xl,
-    .bloc-lg {
+    .bloc-xl {
         padding: 40px 0;
     }
-    .bloc-sm,
+   
     .bloc-md {
         padding-left: 0;
         padding-right: 0;
     }
-    .bloc-tile-2 .container,
-    .bloc-tile-3 .container,
-    .bloc-tile-4 .container,
+    .bloc-tile-2,
+    .bloc-tile-3,
+    .bloc-tile-4,
     .bloc-fill-screen .fill-bloc-top-edge,
     .bloc-fill-screen .fill-bloc-bottom-edge {
         padding-left: 0;
@@ -1007,9 +911,7 @@ h4 {
     .voffset-md {
         margin-top: 20px;
     }
-    .voffset-lg {
-        margin-top: 30px;
-    }
+    
     form {
         padding: 5px;
     }
@@ -1025,13 +927,6 @@ h4 {
     .blocsapp-device-iphone5 img {
         width: 180px;
         height: 320px;
-    }
-}
-
-@media (max-width: 400px) {
-    .bloc {
-        padding-left: 0;
-        padding-right: 0;
     }
 }
 
