Nesting du code CSS

--- a/css/normalize.css
+++ b/css/normalize.css
@@ -1,7 +1,7 @@
 * { 
     font-family: helvetica, sans-serif;
-    /*font-size: ;
-    color: ;*/
+    font-size: 14;
+    color: #162339;
     text-decoration: none;
     list-style-type: none;
     margin: 0%;
