--- a/style.css
+++ b/style.css
@@ -1,574 +1,47 @@
+/*///// body /////*//*///// body /////*//*///// body /////*//*///// body /////*//*///// body /////*/
+/*///// body /////*//*///// body /////*//*///// body /////*//*///// body /////*//*///// body /////*/
+/*///// body /////*//*///// body /////*//*///// body /////*//*///// body /////*//*///// body /////*/
+/*///// body /////*//*///// body /////*//*///// body /////*//*///// body /////*//*///// body /////*/
+
 body {
-    margin: 0;
-    padding: 0;
-    background: #FFF;
-    overflow-x: hidden;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
+    background: #FFFF;
 }
 
+/*///// title /////*//*///// title /////*/
+
 h1 {
-    font-size: 32px;
+    font-size: 2em;
 }
 h2 { 
-    font-size: 22px;
-    line-height: 1.4em;
-    text-align: center;
+    font-size: 1.375em;
 }
 h3 {
     margin-top: 10px;
     margin-bottom: 20px;
+    font-size: .940em;
 }
-h4
-
-a,
-button {
-    transition: all .3s ease-in-out;
-    outline: none!important;
-}
-
-a:hover {
-    text-decoration: none;
-    cursor: pointer;
-}
-
-#page-loading-blocs-notifaction {
-    position: fixed;
-    top: 0;
-    bottom: 0;
-    width: 100%;
-    z-index: 100000;
-    background: #FFFFFF url("img/pageload-spinner.gif") no-repeat center center;
-}
-
-.bloc {
-    width: 100%;
-    clear: both;
-    background-color: #FFFFFF;
-    background: 50% 50% no-repeat;
-    padding: 0 50px;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
-    position: relative;
-}
-
-.bloc-md {
-    padding: 50px;
-}
-
-
-
-.bg-center,
-.bg-l-edge,
-.bg-r-edge,
-.bg-b-edge,
-.bg-tl-edge,
-.bg-bl-edge,
-.bg-tr-edge,
-.bg-br-edge {
-    -webkit-background-size: auto!important;
-    -moz-background-size: auto!important;
-    -o-background-size: auto!important;
-    background-size: auto!important;
-}
-
-.d-bloc {
-    color: rgba(255, 255, 255, .7);
-}
-
-.d-bloc button:hover {
-    color: rgba(255, 255, 255, .9);
-}
-
-.d-bloc .icon-round,
-.d-bloc .icon-square,
-.d-bloc .icon-rounded,
-.d-bloc .icon-semi-rounded-a,
-.d-bloc .icon-semi-rounded-b {
-    border-color: rgba(255, 255, 255, .9);
-}
-
-.d-bloc .divider-h span {
-    border-color: rgba(255, 255, 255, .2);
-}
-
-/*
-.d-bloc .navbar-toggle .icon-bar {
-    background: rgba(255, 255, 255, 1);
-}*/
-
-.d-bloc .btn-wire,
-.d-bloc .btn-wire:hover {
-    color: rgba(255, 255, 255, 1);
-    border-color: rgba(255, 255, 255, 1);
-}
-
-.d-bloc .panel {
-    color: rgba(0, 0, 0, .5);
-}
-
-.d-bloc .panel button:hover {
-    color: rgba(0, 0, 0, .7);
-}
-
-.d-bloc .panel icon {
-    border-color: rgba(0, 0, 0, .7);
-}
-
-.d-bloc .panel .divider-h span {
-    border-color: rgba(0, 0, 0, .1);
-}
-
-.d-bloc .panel .a-btn {
-    color: rgba(0, 0, 0, .6);
-}
-
-.d-bloc .panel .a-btn:hover {
-    color: rgba(0, 0, 0, 1);
-}
-
-.d-bloc .panel .btn-wire,
-.d-bloc .panel .btn-wire:hover {
-    color: rgba(0, 0, 0, .7);
-    border-color: rgba(0, 0, 0, .3);
-}
-
-.d-bloc .panel {
-    color: rgba(0, 0, 0, .5);
-}
-
-.d-bloc .panel button:hover {
-    color: rgba(0, 0, 0, .7);
-}
-
-/*.l-bloc .icon-round,
-.l-bloc .icon-square,
-.l-bloc .icon-rounded,
-.l-bloc .icon-semi-rounded-a,
-.l-bloc .icon-semi-rounded-b {
-    border-color: rgba(0, 0, 0, .7);
-}
-
-.d-bloc .panel .divider-h span,
-.l-bloc .divider-h span {
-    border-color: rgba(0, 0, 0, .1);
-}
-
-
-.l-bloc .navbar-toggle .icon-bar {
-    color: rgba(0, 0, 0, .6);
-}
-
-.d-bloc .panel .btn-wire,
-.d-bloc .panel .btn-wire:hover,
-.l-bloc .btn-wire,
-.l-bloc .btn-wire:hover {
-    color: rgba(0, 0, 0, .7);
-    border-color: rgba(0, 0, 0, .3);
-}*/
-
-.voffset {
-    margin-top: 30px;
-}
-
-.navbar {
-    margin-bottom: 0;
-    z-index: 1;
-}
-
-.navbar-brand {
-    height: auto;
-    padding: 3px 15px;
-    font-size: 25px;
-    font-weight: normal;
-    font-weight: 600;
-    line-height: 44px;
-}
-
-.navbar-brand img {
-    max-height: 200px;
-    margin: 0 5px 0 0;
-    display: inline;
-}
-
-.navbar-brand img[src$=svg] {
-    min-width: 100px;
-}
-
-.nav-center .navbar-brand img {
-    margin: 0;
-}
-
-.navbar .nav {
-    padding-top: 2px;
-    margin-right: -16px;
-    float: right;
-    z-index: 1;
-}
-
-.nav > li {
-    float: left;
-    margin-top: 4px;
-    font-size: 16px;
-}
-
-.navbar-nav .open .dropdown-menu > li > a {
-    text-align: inherit;
-}
-
-.nav > li a:hover,
-.nav > li a:focus {
-    background: transparent;
-}
-
-.navbar-toggle {
-    margin: 10px 10px 0 0;
-    border: 0px;
-}
-
-.navbar-toggle:hover {
-    background: transparent!important;
-}
-
-.navbar-toggle .icon-bar {
-    background-color: rgba(0, 0, 0, .5);
-    width: 26px;
-}
-
-.nav-invert .navbar .nav {
-    float: left;
-}
-
-.nav-invert,
-.nav-invert .navbar-brand {
-    float: right;
-    position: relative;
-    z-index: 2;
-}
-
-@media (min-width: 768px) {
-    .site-navigation {
-        position: absolute;
-        top: 50%;
-        right: 20px;
-        transform: translate(0, -50%);
-        -webkit-transform: translateY(-50%);
-    }
-    .nav > li .dropdown-menu a,
-    .nav > li .dropdown-menu a:hover {
-        color: #484848;
-    }
-    .nav-invert .site-navigation {
-        left: 0;
-        right: 0;
-    }
-    .nav-center {
-        text-align: center;
-    }
-    .nav-center {
-        width: 100%;
-    }
-    .nav-center .navbar-brand,
-    .nav-center .nav > li {
-        float: none;
-        display: inline-block;
-    }
-    .nav-center .site-navigation {
-        position: relative;
-        width: 100%;
-        right: 0;
-        margin-right: 0px;
-        margin-top: 20px;
-    }
-    .nav-center.mini-nav .navbar-toggle {
-        float: none;
-        margin: 10px auto 0;
-    }
-}
-
-.nav > li > .dropdown a {
-    background: none!important;
-    display: block;
-    padding: 14px 15px;
-}
-
-nav .caret {
-    margin: 0 5px;
-}
-
-.dropdown-menu .dropdown-menu {
-    top: -8px;
-    left: 100%;
-}
-
-.dropdown-menu .dropmenu-flow-right {
-    top: 100%;
-    left: 0;
-    margin-left: -1px;
-    border-top-left-radius: 0;
-    border-top-right-radius: 0;
-}
-
-.dropdown-menu .dropdown span {
-    border: 4px solid black;
-    border-top-color: transparent;
-    border-right-color: transparent;
-    border-bottom-color: transparent;
-    margin: 6px -5px 0 0!important;
-    float: right;
-}
-
-.mg-lg {
-    margin-top: 10px;
-    margin-bottom: 40px;
-}
-
-.btn {
-    margin: 0 5px 5px 0;
-}
-
-.btn.pull-right {
-    margin: 0 0 5px 5px;
-}
-
-.btn-d,
-.btn-d:hover,
-.btn-d:focus {
-    color: #FFF;
-    background: rgba(0, 0, 0, .3);
-}
-
-button {
-    outline: none!important;
-}
-
-.btn-rd {
-    border-radius: 40px;
-}
-
-.icon-md {
-    font-size: 30px!important;
-}
-
-.panel-sq,
-.panel-sq .panel-heading,
-.panel-sq .panel-footer {
-    border-radius: 0;
-}
-
-.panel-rd {
-    border-radius: 30px;
-}
-
-.panel-rd .panel-heading {
-    border-radius: 29px 29px 0 0;
-}
-
-.panel-rd .panel-footer {
-    border-radius: 0 0 29px 29px;
-}
-
-.form-control {
-    border-color: rgba(0, 0, 0, .1);
-    box-shadow: none;
-}
-
-.scrollToTop {
-    width: 40px;
-    height: 40px;
-    position: fixed;
-    bottom: 20px;
-    right: 20px;
-    opacity: 0;
-    z-index: 500;
-    transition: all .3s ease-in-out;
-}
-
-.scrollToTop span {
-    margin-top: 6px;
-}
-
-.showScrollTop {
-    font-size: 14px;
-    opacity: 1;
-}
-
-a[data-lightbox] {
-    position: relative;
-    display: block;
-    text-align: center;
-}
-
-a[data-lightbox]:hover::before {
-    content: "+";
-    font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial;
-    font-size: 32px;
-    width: 50px;
-    height: 50px;
-    margin-left: -25px;
-    border-radius: 50%;
-    background: rgba(0, 0, 0, .6);
-    color: #FFF;
-    font-weight: 100;
-    z-index: 1;
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    -webkit-transform: translateY(-50%);
-}
-
-a[data-lightbox]:hover img {
-    opacity: 0.6;
-    -webkit-animation-fill-mode: none;
-    animation-fill-mode: none;
-}
-
-#lightbox-modal {
-    display: flex;
-    align-items: center;
-}
-
-#lightbox-modal .modal-dialog {
-    width: 90%;
-    max-width: 900px;
-    margin: 0 auto 0;
-}
-
-#lightbox-modal .modal-dialog img {
-    max-height: 90vh;
-    margin: 0 auto;
-}
-
-.lightbox-caption {
-    padding: 20px;
-    color: #FFF;
-    background: rgba(0, 0, 0, .5);
-    position: absolute;
-    left: 15px;
-    right: 15px;
-    bottom: 5px;
-}
-
-.close-lightbox {
-    color: #FFF;
-    font-size: 30px;
-    position: absolute;
-    top: 20px;
-    right: 20px;
-    z-index: 20;
-    background: rgba(0, 0, 0, .5);
-    border: none;
-    line-height: 30px;
-    padding: 0 9px 5px;
-    opacity: 0.3;
-}
-
-.close-lightbox:hover,
-.next-lightbox:hover,
-.prev-lightbox:hover {
-    opacity: 1.0;
-    color: #FFF;
-}
-
-.next-lightbox,
-.prev-lightbox {
-    font-size: 20px;
-    color: rgba(255, 255, 255, .9);
-    background: rgba(0, 0, 0, .5);
-    transition: all .2s ease-in-out;
-    position: absolute;
-    top: 45%;
-    z-index: 1;
-    opacity: 0.4;
-}
-
-.next-lightbox {
-    padding: 6px 8px 1px 13px;
-    right: 25px;
-}
-
-.prev-lightbox {
-    padding: 6px 13px 1px 10px;
-    left: 25px;
-}
-
-.snapshot-lb .modal-body {
-    padding-bottom: 45px;
-}
-
-.snapshot-lb .lightbox-caption {
-    padding: 0;
-    color: rgba(0, 0, 0, .5);
-    background: none;
-}
-
-.statement-bloc-text {
-    line-height: 26px;
-    font-style: italic;
-    font-size: 20px;
-    text-align: center;
-    font-weight: lighter;
-    max-width: 520px;
-    margin: auto auto auto auto;
-}
-
-p {
-    font-size: 11px;
-}
-
-.h1 {
-    font-size: 20px;
-    font-family: "Open Sans";
-}
-
-.social {
-    max-width: 400px;
-    margin: auto;
-}
-
-h3 {
-    font-size: 15px;
-    text-transform: uppercase;
-    font-weight: 700;
-    color: #333333!important;
-}
-
-h1 {
-    color: #333333!important;
-}
-
 h4 {
-    color: #333333!important;
+    font-size: .875em;
 }
 
-.black {
-    color: #000;
+h1, h2, h3, h4 {
+    text-align: center;
+    font-weight: 700;
 }
 
-.portfolio-thumb {
-    margin-bottom: 24px;
+/*///// color txt /////*//*///// color txt /////*/
+
+.txt--orange {
+    color: #F3976C;
 }
 
-.avatar {
-    box-shadow: 0px 4px 9px rgba(0, 0, 0, 0.3);
+.txt--white {
+    color: #FFFF;
 }
 
-.ltc-atomic-tangerine {
-    color: #f4ab89!important;
+.txt--black {
+    color: #162339;
 }
-
-.ltc-atomic-tangerine:hover {
-    color: #c27956!important;
-}
-
-/*///// body /////*//*///// body /////*//*///// body /////*//*///// body /////*//*///// body /////*/
-/*///// body /////*//*///// body /////*//*///// body /////*//*///// body /////*//*///// body /////*/
-/*///// body /////*//*///// body /////*//*///// body /////*//*///// body /////*//*///// body /////*/
-/*///// body /////*//*///// body /////*//*///// body /////*//*///// body /////*//*///// body /////*/
-
-
 
 /*///// btn /////*//*///// btn /////*//*///// btn /////*//*///// btn /////*//*///// btn /////*/
 /*///// btn /////*//*///// btn /////*//*///// btn /////*//*///// btn /////*//*///// btn /////*/
@@ -585,24 +58,19 @@ h4 {
 }
 
 .btn:hover {
-    background: #c27956!important;
-    color: #FFFFFF!important;
-}
-
-.btn--txt{
-    color: #ffff;
-}
-
-.txt--orange {
-    color: #F3976C;
-}
-
-.txt--white {
+    background: #c27956;
     color: #FFFF;
 }
 
-.txt--black {
-    color: #162339;
+.btn--txt{
+    color: #FFFF;
+}
+
+/*///// animation /////*//*///// animation /////*/
+
+a, button {
+    transition: all .3s ease-in-out;
+    outline: none;
 }
 
 /*///// header /////*//*///// header /////*//*///// header /////*//*///// header /////*//*///// header /////*/
@@ -615,6 +83,10 @@ h4 {
     padding-top: 20px;
 }
 
+.icon-bar {
+    background-color: #162339;
+}
+
 /*///// main /////*//*///// main /////*//*///// main /////*//*///// main /////*//*///// main /////*/
 /*///// main /////*//*///// main /////*//*///// main /////*//*///// main /////*//*///// main /////*/
 /*///// main /////*//*///// main /////*//*///// main /////*//*///// main /////*//*///// main /////*/
@@ -624,6 +96,8 @@ h4 {
     display: flex;
     flex-direction: column;
 }
+
+/*///// aside top /////*//*///// aside top /////*/
 
 .aside--top {
     width: 100%; height: 430px;
@@ -639,15 +113,14 @@ h4 {
     background-size: auto!important;
 }
 
-/*///// article /////*//*///// article /////*//*///// article /////*//*///// article /////*//*///// article /////*/
-/*///// article /////*//*///// article /////*//*///// article /////*//*///// article /////*//*///// article /////*/
-/*///// article /////*//*///// article /////*//*///// article /////*//*///// article /////*//*///// article /////*/
-/*///// article /////*//*///// article /////*//*///// article /////*//*///// article /////*//*///// article /////*/
+/*///// article /////*//*///// article /////*/
 
 .article {
     padding-right: 15px;
     padding-left: 15px;
 }
+
+/*///// article top /////*//*///// article top /////*/
 
 .articleTop__container {
     max-width: 800px;
@@ -662,10 +135,7 @@ h4 {
     text-shadow: 0 1px 2px rgba(0, 0, 0, .3);
 }
 
-/*///// article middle /////*//*///// article middle /////*//*///// article middle /////*//*///// article middle /////*//*///// article middle /////*/
-/*///// article middle /////*//*///// article middle /////*//*///// article middle /////*//*///// article middle /////*//*///// article middle /////*/
-/*///// article middle /////*//*///// article middle /////*//*///// article middle /////*//*///// article middle /////*//*///// article middle /////*/
-/*///// article middle /////*//*///// article middle /////*//*///// article middle /////*//*///// article middle /////*//*///// article middle /////*/
+/*///// article middle /////*//*///// article middle /////*/
 
 .article--middle {
     display: flex;
@@ -689,26 +159,20 @@ h4 {
     text-decoration: underline;
 }
 
-/*///// article bottom /////*//*///// article bottom /////*//*///// article bottom /////*//*///// article bottom /////*//*///// article bottom /////*/
-/*///// article bottom /////*//*///// article bottom /////*//*///// article bottom /////*//*///// article bottom /////*//*///// article bottom /////*/
-/*///// article bottom /////*//*///// article bottom /////*//*///// article bottom /////*//*///// article bottom /////*//*///// article bottom /////*/
-/*///// article bottom /////*//*///// article bottom /////*//*///// article bottom /////*//*///// article bottom /////*//*///// article bottom /////*/
+/*///// article bottom /////*//*///// article bottom /////*/
 
 .article--bottom {
     margin: 20px 0px 30px 0px;
 }
 
-/*///// section /////*//*///// section /////*/
+/*///// section from article bottom /////*//*///// section from article bottom /////*/
 
 .container__portfolio {
     max-width: 600px;
     margin: auto;
 }
 
-/*///// aside bottom /////*//*///// aside bottom /////*//*///// aside bottom /////*//*///// aside bottom /////*//*///// aside bottom /////*/
-/*///// aside bottom /////*//*///// aside bottom /////*//*///// aside bottom /////*//*///// aside bottom /////*//*///// aside bottom /////*/
-/*///// aside bottom /////*//*///// aside bottom /////*//*///// aside bottom /////*//*///// aside bottom /////*//*///// aside bottom /////*/
-/*///// aside bottom /////*//*///// aside bottom /////*//*///// aside bottom /////*//*///// aside bottom /////*//*///// aside bottom /////*/
+/*///// aside bottom /////*//*///// aside bottom /////*/
 
 .asideBottom {
     width: 100%; height: 260px;
@@ -756,53 +220,6 @@ h4 {
 /*///// média queries /////*//*///// média queries /////*//*///// média queries /////*//*///// média queries /////*//*///// média queries /////*/
 /*///// média queries /////*//*///// média queries /////*//*///// média queries /////*//*///// média queries /////*//*///// média queries /////*/
 /*///// média queries /////*//*///// média queries /////*//*///// média queries /////*//*///// média queries /////*//*///// média queries /////*/
-
-@media (max-width: 1024px) {
-    .bloc {
-        padding-left: 20px;
-        padding-right: 20px;
-    }
-    .bloc.full-width-bloc,
-    .bloc-tile-2.full-width-bloc,
-    .bloc-tile-3.full-width-bloc,
-    .bloc-tile-4.full-width-bloc {
-        padding-left: 0;
-        padding-right: 0;
-    }
-}
-
-@media (max-width: 992px) and (min-width: 768px) {
-    .navbar .nav {
-        max-width: 80%
-    }
-    .nav-center.navbar .nav {
-        max-width: 100%
-    }
-}
-
-@media (max-width: 991px) {
-    
-    .page-container,
-    #hero-bloc {
-        overflow-x: hidden;
-        position: relative;
-    }
-    .bloc {
-        padding-left: constant(safe-area-inset-left);
-        padding-right: constant(safe-area-inset-right);
-    }
-    .bloc-group,
-    .bloc-group .bloc {
-        display: block;
-        width: 100%;
-    }
-    .bloc-fill-screen .fill-bloc-top-edge,
-    .bloc-fill-screen .fill-bloc-bottom-edge {
-        padding: 0 20px;
-        padding-left: constant(safe-area-inset-left);
-        padding-right: constant(safe-area-inset-right);
-    }
-}
 
 @media (max-width: 767px) {
     .page-container {
@@ -930,8 +347,42 @@ h4 {
     }
 }
 
-@media (max-width: 767px) {
-    .bloc-mob-center-text {
+@media (min-width: 768px) {
+    .site-navigation {
+        position: absolute;
+        top: 50%;
+        right: 20px;
+        transform: translate(0, -50%);
+        -webkit-transform: translateY(-50%);
+    }
+    .nav > li .dropdown-menu a,
+    .nav > li .dropdown-menu a:hover {
+        color: #484848;
+    }
+    .nav-invert .site-navigation {
+        left: 0;
+        right: 0;
+    }
+    .nav-center {
         text-align: center;
+    }
+    .nav-center {
+        width: 100%;
+    }
+    .nav-center .navbar-brand,
+    .nav-center .nav > li {
+        float: none;
+        display: inline-block;
+    }
+    .nav-center .site-navigation {
+        position: relative;
+        width: 100%;
+        right: 0;
+        margin-right: 0px;
+        margin-top: 20px;
+    }
+    .nav-center.mini-nav .navbar-toggle {
+        float: none;
+        margin: 10px auto 0;
     }
 }
